# the-house

./: Dockerfile  README.md  pyproject.toml
thehouse/: __main__.py  game_engine.py  play.py  thehouse.py
thehouse.old/: thehouse.py
thehouse.old/characters/: character.py  monster.py  player.py
thehouse.old/helpers/: print_pause.py  random_death.py  validate_input.py
thehouse.old/rooms/: livingroom.py  studio.py
thehouse/characters/: __init__.py  character.py  monster.py  player.py
thehouse/helpers/: __init__.py  validate_input.py
thehouse/rooms/: __init__.py  bedroom.py  diningroom.py  hall.py  hallway.py  kitchen.py  livingroom.py  room.py  studio.py
