[tool.poetry]
name = "thehouse"
version = "1.1.0"
description = "A text-based game written in python"
authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
repository = "https://github.com/ctrlmaniac/the-house/"
reaedme = "README.md"
license = "MIT"
classifiers = [
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
